--- a/suriya.html
+++ b/suriya.html
@@ -2,3 +2,7 @@
   <h1>Suriya</h1>
 </center>
 <hr>
+
+<p>Suriya is a talented actor known for his versatility and dedication to his craft. He has appeared in numerous films across various genres, earning critical acclaim and a loyal fan base.
+  
+</p>
