addedd Phone Number

--- a/suriya.html
+++ b/suriya.html
@@ -6,3 +6,6 @@
 <p>Suriya is a talented actor known for his versatility and dedication to his craft. He has appeared in numerous films across various genres, earning critical acclaim and a loyal fan base.
   
 </p>
+<p>
+  contacts:9876543210
+</p>
